--- a/src/TournamentGenerator.csproj
+++ b/src/TournamentGenerator.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>CouchPartyGames.TournamentGenerator</PackageId>
-	  <Version>1.0.6-alpha</Version>
+	  <Version>1.1.0-beta</Version>
 	  <Authors>CouchPartyGames</Authors>
 	  <SymbolPackageForm>snupkg</SymbolPackageForm>
 	  <PackageProjectUrl>https://github.com/CouchPartyGames/TournamentGenerator</PackageProjectUrl>
