--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish Nuget
+name: Publish TournamentGenerator Nuget
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Publish NuGet package
+    name: Publish TournamentGenerator NuGet package
     runs-on: ubuntu-latest
     env:
       TEST: "Test"
@@ -31,4 +31,4 @@ jobs:
           
       - name: Publish the package to nuget.org
         run: |
-          dotnet nuget push */src/bin/Release/*.nupkg -k $NUGET_API_KEY -s https://api.nuget.org/v3/index.json
+          dotnet nuget push */TournamentGenerator/src/bin/Release/*.nupkg -k $NUGET_API_KEY -s https://api.nuget.org/v3/index.json
