--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build solution and generate NuGet package
         run: |
           cd src
-          dotnet pack -c Release
+          dotnet pack -c Release -o out
           
       - name: Publish the package to nuget.org
         run: |
-          dotnet nuget push */TournamentGenerator/src/bin/Release/*.nupkg -k $NUGET_API_KEY -s https://api.nuget.org/v3/index.json
+          dotnet nuget push **/*.nupkg -k $NUGET_API_KEY -s https://api.nuget.org/v3/index.json
