--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build solution and generate NuGet package
         run: |
           cd src
-          dotnet pack -c Release -o out
+          dotnet pack -c Release 
           
       - name: Publish the package to nuget.org
         run: |
